name:                MultiArmedBandit
version:             0.1.0.0
synopsis:            Simple project template from stack
license:             BSD3
license-file:        LICENSE
author:              Anthony Caccia
maintainer:          acaccia@ulb.ac.be
copyright:           2016 acaccia
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable MultiArmedBandit
  hs-source-dirs:      src
  default-extensions:  NoImplicitPrelude
                     , BangPatterns
  ghc-options:         -O2 -threaded
  main-is:             MultiArmedBandit.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Chart
                     , Chart-cairo
                     , containers
                     , MonadRandom
                     , normaldistribution
                     , protolude

executable JointActions
 hs-source-dirs:      src
 default-extensions:  NoImplicitPrelude
                    , BangPatterns
 ghc-options:         -O2 -threaded
 main-is:             JointActions.hs
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5
                    , Chart
                    , Chart-cairo
                    , containers
                    , MonadRandom
                    , normaldistribution
                    , protolude
